Added text to footer

--- a/weather-app/index.html
+++ b/weather-app/index.html
@@ -48,6 +48,7 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">StephX</a>
+          and hosted on Netlify.
         </p>
       </footer>
     </div>
