--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         <p>
           This project was coded by
           <a href="#" target="_blank">StephX</a>
-          and hosted on Netlify.
+          and hosted on
+          <a href="https://www.netlify.com" target="_blank">Netlify</a>.
         </p>
       </footer>
     </div>
