--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">StephX</a>
+          <a href="https://github.com/stephxho" target="_blank">StephX</a>
+          and is on
+          <a href="https://github.com/stephxho/week6-challenge" target="_blank"
+            >GitHub</a
+          >
           and hosted on
-          <a href="https://www.netlify.com" target="_blank">Netlify</a>.
+          <a href="https://gleaming-eclair-e0fdc4.netlify.app/" target="_blank"
+            >Netlify</a
+          >.
         </p>
       </footer>
     </div>
